[tool.poetry]
name = "codemapper"
version = "0.1.0"
description = "Semantic, relational and hierarchical code indexing aided by summaries"
authors = ["Aniruddha Adhikary <932949+aniruddha-adhikary@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aniruddha-adhikary/codemapper"

packages = [
    {include = "codemapper"}
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
